--- a/css/styles.css
+++ b/css/styles.css
@@ -1570,13 +1570,6 @@
       rotate: calc(180deg * -1);
     }
   }
-  .group-hover\:block {
-    &:is(:where(.group):hover *) {
-      @media (hover: hover) {
-        display: block;
-      }
-    }
-  }
   .group-hover\:translate-x-1 {
     &:is(:where(.group):hover *) {
       @media (hover: hover) {
@@ -1705,13 +1698,6 @@
     &:is([open], :popover-open, :open) {
       --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
       box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-    }
-  }
-  .hover\:block {
-    &:hover {
-      @media (hover: hover) {
-        display: block;
-      }
     }
   }
   .hover\:translate-x-1 {
@@ -2365,7 +2351,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 body.mobile-menu-open {
-  overflow: hidden;
+  overflow: auto;
 }
 .site-header {
   position: fixed;
